<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Product details -->
    <LinearLayout
        android:id="@+id/book_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_margin">

        <!-- Label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/product_details"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edit_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_author"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edit_book_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                android:inputType="numberDecimal"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_info"
        android:layout_below="@id/book_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/button_decrement"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/initial_quantity"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:gravity="center"/>

            <Button
                android:id="@+id/increment_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/button_increment"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/quantity_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/supplier_details"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_book_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edit_book_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_phone"
                android:inputType="phone" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/order_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/order_book"/>

</RelativeLayout>